enclose the body in a form

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <title>Document</title>
 </head>
 <body>
-
+  <h1>My Ghanian Name</h1>
+  <form name="my form">
  <!-- male -->
 
  <label for="fname">date of birth eg 10:</label><br>
@@ -40,7 +41,7 @@
  <input type="number" id="yearofbirth" min="01" max="99"><br>
 
  <button onclick="birthday1()">Submit</button> <br>
-
+  </form>
 
 
   <script src = "js/script.js"></script>
