change input value for male from number to text

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
  <!-- male -->
 
  <label for="fname">date of birth eg 10:</label><br>
- <input type="number" id="dateofbirth" name="Date of Birth" min="1" max="31"><br>
+ <input type="text" id="dateofbirth" name="Date of Birth" min="1" max="31"><br>
 
  <label for="fname">month of birth e.g 8 for August:</label><br>
- <input type="number" id="monthofbirth" min="1" max="12"><br>
+ <input type="text" id="monthofbirth" min="1" max="12"><br>
 
  <label for="fname">century of birth eg for 1990 write 19:</label><br>
- <input type="number" id="centuryofbirth" min="19" max="20"><br>
+ <input type="text" id="centuryofbirth" min="19" max="20"><br>
 
  <label for="fname">Year Of Birth eg for 1990 write 90:</label><br>
- <input type="number" id="yearofbirth" min="01" max="99"><br>
+ <input type="text" id="yearofbirth" min="01" max="99"><br>
 
  <button onclick="birthday1()">Submit</button> <br>
  
