add styling to boy class,add background image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <form name="my form">
           <!-- male -->
           <div class="boy">
-          <h2>Enter Your data if Male</h2>
+          <h2>Enter Your data if you are Male!!</h2>
           <label for="fname">date of birth eg 10:</label><br>
           <input type="text" id="dateofbirth" name="Date of Birth" min="1" max="31"><br>
 
@@ -40,7 +40,7 @@
         </div>
           <!-- female input data -->
           <div class="girl">
-          <h2>Enter Your data if Female</h2>
+          <h2>Enter Your data if you are Female!!</h2>
 
           <label for="fname">date of birth eg 10:</label><br>
           <input type="text" id="dateofbirth" name="Date of Birth" min="1" max="31"><br>
