changes to the styling sheet

--- a/home.html
+++ b/home.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-  <button class = "button2">Home</button>
   <div class="heading1">
   <h1><span>Ghanian Name</span></h1>
   <p>Ghanian names are fascinating.The Ghanians name themselves based on the day they were born.<br>To get Your Ghanian enter the form below.<br></p>
@@ -23,8 +22,8 @@
         <form class= "My-Form">
           <input type="date" class="Horse">
           <select class="Timothy" id="">
-            <option value="male">Male</option>
-            <option value="female">Female</option>
+            <option value="male">Male</option><br>
+            <option value="female">Female</option><br>
           </select>
           
          
